# ground-robotics-walle-project

./: README.md
astra_detection/: CMakeLists.txt  package.xml
astra_detection/src/: color_objects_detection.cpp
cerebro_walle/: CMakeLists.txt  package.xml
cerebro_walle/src/: cerebro_walle (copy).cpp  cerebro_walle.cpp  cerebro_walle_07052020.cpp  cerebro_walle_bk.cpp
cluster_detection/: CMakeLists.txt  package.xml
cluster_detection/script/: classes.py  classes_bk.py  function.py  function_bk.py  main.py
grobotics_maze1/: CMakeLists.txt  package.xml
grobotics_maze1/launch/: maze1.launch  maze2.launch
grobotics_maze1/worlds/: maze2.world
maps/: eurecat1.pgm  eurecat1.yaml
my_configure/launch/: explore.launch
my_configure/src/: bool_publisher.cpp
my_dyn_rec/: CMakeLists.txt  package.xml
my_dyn_rec/cfg/: MyParams.cfg
my_dyn_rec/src/: my_node.cpp
navigation_layers/danger_navigation_layers/: CHANGELOG.rst  CMakeLists.txt  costmap_plugins.xml  package.xml
navigation_layers/exit_navigation_layers/: CHANGELOG.rst  CMakeLists.txt  costmap_plugins.xml  package.xml
navigation_layers/safe_navigation_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
simple_layers/: CMakeLists.txt  package.xml
simple_layers/src/: grid_layer.cpp
turtlebot_nacho/launch/: main.launch  robotonmaze1.launch
turtlebot_nacho/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot_nacho/params3/: costmap_common_params.yaml  global_costmap_params.yaml  (+3 more)
turtlebot_walle/: CMakeLists.txt  package.xml
vision/: CMakeLists.txt
(+61 files in other folders)
